--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,20 @@
     <artifactId>MockTrialTab</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-        <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver</artifactId>
-        <version>3.2.0</version>
-        </dependency>
-        <dependency>
+       <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.1.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.22</version>
+        </dependency>
     </dependencies>
-    
 </project>
