--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,15 @@
             <artifactId>spring-context</artifactId>
             <version>4.1.9.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>3.2.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
